# FileBackUpSync

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  backup.example.toml  log_2023-11-18.txt  main.py  pyproject.toml
.github/workflows/: ci.yml
backup_sync/: __init__.py  checkpoint.py  cli.py  config.py  config_manager.py  core.py  fingerprint.py  formatting.py  ignore_rules.py  progress.py  reporting.py
backup_sync/analyzers/: __init__.py  base.py  duplicates.py  health.py  ignored.py  integrity.py  large_files.py  registry.py  small_files.py  symlinks.py
backup_sync/runs/: __init__.py  checkpoint.py  reporting.py
backup_sync/storage/: __init__.py  archive.py  fileops.py  fingerprint.py  protection.py
backup_sync/sync/: __init__.py  executor.py  models.py  operations.py  planner.py  scanner.py
config/: .ignore_dir
scripts/: quality_check.sh  release.sh
tests/: test_analyzers.py  test_cli.py  test_config_manager.py  test_core.py  test_fingerprint.py  test_package.py  test_progress.py  test_reporting.py
tests/runs/: __init__.py  test_reporting.py
tests/storage/: test_fileops.py  test_fingerprint.py
tests/sync/: __init__.py  test_sync.py
