[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "file-backup-sync"
version = "1.0.0"
description = "Safe one-way incremental directory backup"
requires-python = ">=3.11"
dependencies = ["tqdm>=4.66"]

[project.scripts]
backup-sync = "backup_sync.cli:main"

[project.optional-dependencies]
dev = [
  "coverage>=7.6",
  "mypy>=1.14",
  "ruff>=0.9",
  "types-tqdm>=4.66",
]

[tool.setuptools.packages.find]
include = ["backup_sync*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["backup_sync", "main.py"]

[tool.coverage.run]
branch = true
source = ["backup_sync"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
