[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "file-backup-sync"
version = "0.6.2"
description = "Safe one-way incremental directory backup"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["blake3>=1.0", "tomlkit>=0.13", "tqdm>=4.66"]
keywords = ["backup", "sync", "incremental-backup", "file-management"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Archiving :: Backup",
]

[project.scripts]
backup-sync = "backup_sync.cli:main"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "coverage>=7.6",
  "mypy>=1.14",
  "ruff>=0.9",
  "types-tqdm>=4.66",
]

[tool.setuptools.packages.find]
include = ["backup_sync*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["backup_sync", "main.py"]

[tool.coverage.run]
branch = true
source = ["backup_sync"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
